WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Amount_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transferred__c</fullName>
    <label>Amount Transferred</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>