WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Carrier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Revenue__c</fullName>
    <inlineHelpText>This is the revenue from the transactions that comes from the carrier.</inlineHelpText>
    <label>Carrier Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>