WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Chain__c.field-meta.xml
<CustomField>
    <fullName>Chain__c</fullName>
    <label>Chain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loves</fullName>
            </value>
            <value>
                <fullName>Pilot / Flying J</fullName>
            </value>
            <value>
                <fullName>TA / Petro</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>