WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Commission_Category__c.field-meta.xml
<CustomField>
    <fullName>Commission_Category__c</fullName>
    <formula>IF(Year(First_Transaction_Date__c ) = YEAR( Transaction_Summary__r.Last_Processed_Date__c ), &quot;New&quot;,
IF((MONTH(First_Transaction_Date__c) = 10 || MONTH(First_Transaction_Date__c) = 11 || MONTH(First_Transaction_Date__c) = 12 || 
YEAR(First_Transaction_Date__c)=YEAR( Transaction_Summary__r.Last_Processed_Date__c )-10), &quot;New&quot;,&quot;Retention&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Category</label>
    <type>Text</type>
</CustomField>