WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>