WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Litres__c.field-meta.xml
<CustomField>
    <fullName>Litres__c</fullName>
    <label>Litres</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>