WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>ACH Credit</fullName>
            </value>
            <value>
                <fullName>ACH Transfer</fullName>
            </value>
            <value>
                <fullName>ACH Transfer Credit</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>ATM Credit</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cash Adv</fullName>
            </value>
            <value>
                <fullName>Cash Adv Credit</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Check Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Debit Credit</fullName>
            </value>
            <value>
                <fullName>Debit Use Denial</fullName>
            </value>
            <value>
                <fullName>Debit Use Denial Credit</fullName>
            </value>
            <value>
                <fullName>Def</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Draft Credit</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Fuel and Cash</fullName>
            </value>
            <value>
                <fullName>Load</fullName>
            </value>
            <value>
                <fullName>Load Credit</fullName>
            </value>
            <value>
                <fullName>Money Code</fullName>
            </value>
            <value>
                <fullName>Network Use</fullName>
            </value>
            <value>
                <fullName>Network Use Credit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Credit</fullName>
            </value>
            <value>
                <fullName>Other Fee Standard</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Reefer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>