WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>