WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Revenue_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Subtype__c</fullName>
    <label>Revenue Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CROSS_BORDER</fullName>
            </value>
            <value>
                <fullName>DIRECT_BILL</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>MONEY_CODES</fullName>
            </value>
            <value>
                <fullName>OTHER_FEES</fullName>
            </value>
            <value>
                <fullName>REBATES</fullName>
            </value>
            <value>
                <fullName>SMARTFUND_FEES;</fullName>
            </value>
            <value>
                <fullName>SMARTFUNDS</fullName>
            </value>
            <value>
                <fullName>TERMINAL_FUEL</fullName>
            </value>
            <value>
                <fullName>ZCON</fullName>
            </value>
            <value>
                <fullName>Fuel/Carrier Revenue</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Terminal Fuel Revenue</fullName>
            </value>
            <value>
                <fullName>Loves DB Revenue</fullName>
            </value>
            <value>
                <fullName>Transaction Carrier Revenue</fullName>
            </value>
            <value>
                <fullName>Other Direct Bill Revenue</fullName>
            </value>
            <value>
                <fullName>ATM Carrier Revenue</fullName>
            </value>
            <value>
                <fullName>Net Back Rebates to Carrier</fullName>
            </value>
            <value>
                <fullName>Fuel/Merchant Revenue</fullName>
            </value>
            <value>
                <fullName>Money Code Revenue</fullName>
            </value>
            <value>
                <fullName>Pilot/Flying J DB Revenue</fullName>
            </value>
            <value>
                <fullName>TA/Petro Db Revenue</fullName>
            </value>
            <value>
                <fullName>Transaction Funded</fullName>
            </value>
            <value>
                <fullName>Money Code</fullName>
            </value>
            <value>
                <fullName>ATM Upcharge Revenue</fullName>
            </value>
            <value>
                <fullName>B2B Fuel Gross Revenue</fullName>
            </value>
            <value>
                <fullName>Smart Pay Load Revenue</fullName>
            </value>
            <value>
                <fullName>Smart Pay Debit Card Revenue</fullName>
            </value>
            <value>
                <fullName>Smart Pay ATM, Decline, Inquiry</fullName>
            </value>
            <value>
                <fullName>Smart Pay Direct Deposit Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>