WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Non-Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>