WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>