WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary_Detail__c/fields/Transaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Summary__c</fullName>
    <label>Transaction Summary</label>
    <referenceTo>Transaction_Summary__c</referenceTo>
    <relationshipLabel>Transaction Summary Details</relationshipLabel>
    <relationshipName>Transaction_Summary_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>